src/objects/Contract_Templates__c/Contract_Templates__c.object-meta.xml
<CustomObject>
    <label>Contract Templates</label>
    <nameField>
        <displayFormat>CONTEM-{0}</displayFormat>
        <label>Contract Templates Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>