src/objects/Contract_Templates__c/fields/Has_Milestone_clearly_been_achieved__c.field-meta.xml
<CustomField>
    <fullName>Has_Milestone_clearly_been_achieved__c</fullName>
    <label>Has Milestone clearly been achieved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>