src/objects/Contract_Templates__c/fields/Repair_Unit_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Repair_Unit_Serial_Number__c</fullName>
    <label>Repair Unit Serial Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>