src/objects/Contract_Templates__c/fields/SAP_Plant_location_primarily_responsible__c.field-meta.xml
<CustomField>
    <fullName>SAP_Plant_location_primarily_responsible__c</fullName>
    <label>SAP Plant/location primarily responsible</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Albuquerque (1073)</fullName>
            </value>
            <value>
                <fullName>CLW Defense (1039)</fullName>
            </value>
            <value>
                <fullName>CLW Space(1045)</fullName>
            </value>
            <value>
                <fullName>Deer Valley(Olathe/Coon Rapids/Urbana/Sarasota (1103)</fullName>
            </value>
            <value>
                <fullName>Engines PHX(1015)</fullName>
            </value>
            <value>
                <fullName>Glendale Space(1006)</fullName>
            </value>
            <value>
                <fullName>Honeywell Labs(1107)</fullName>
            </value>
            <value>
                <fullName>MPLS(1064)</fullName>
            </value>
            <value>
                <fullName>Plymouth(1065)</fullName>
            </value>
            <value>
                <fullName>Rocky Mount (1056)</fullName>
            </value>
            <value>
                <fullName>South Bend (1051)</fullName>
            </value>
            <value>
                <fullName>Tempe (1017)</fullName>
            </value>
            <value>
                <fullName>Toronto (2003)</fullName>
            </value>
            <value>
                <fullName>Torrance(1030)</fullName>
            </value>
            <value>
                <fullName>Tucson (1018)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>