src/objects/Contract_Templates__c/fields/SAP_Sales_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Sales_Order_Number__c</fullName>
    <label>SAP Sales Order Number</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>