src/objects/Contract_Templates__c/fields/Ship_to_Partner_Number__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Partner_Number__c</fullName>
    <label>Ship to Partner Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>