src/objects/Contract_Templates__c/recordTypes/Milestone_Release.recordType-meta.xml
<RecordType>
    <fullName>Milestone_Release</fullName>
    <active>true</active>
    <label>Milestone Release</label>
</RecordType>