src/objects/Contract_Templates__c/recordTypes/Service_Contract.recordType-meta.xml
<RecordType>
    <fullName>Service_Contract</fullName>
    <active>true</active>
    <label>Service Contract</label>
</RecordType>