src/objects/Contract_Templates__c/recordTypes/Updates.recordType-meta.xml
<RecordType>
    <fullName>Updates</fullName>
    <active>true</active>
    <label>Updates</label>
</RecordType>